# eclide

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-ide.yml  build-vcpkg.yml
BugTrap/: CMakeLists.txt
EclEditor/: CMakeLists.txt  Catalogue.cxx  SciLexer.h
EclLib/: EclErrorParser.cpp
GraphViewCtl/: Lee.cpp  Lee.h  XmlAnbSerializer.cpp
amt/: MainFrm2.cpp  RepositoryCompareView.cpp
clib/: PersistMap.cpp  PersistMap.h  UnicodeFile.cpp  UnicodeFile.h  Util.cpp  global.cpp  stdboost.h
comms/: Attribute.cpp  AttributeImpl.h  AttributeType.cpp  AttributeType.h  CMakeLists.txt  Dali.cpp  DiskAttribute.cpp  DiskAttribute.h  DiskAttributeHistory.cpp  DiskModule.cpp  DiskModule.h  DiskRepository.cpp  EclCC.cpp  MiniApp.cpp  MiniApp.h  ModFileAttributeHistory.cpp  ModFileRepository.cpp  Repository.cpp  Repository.h  Result.cpp  Workspace.cpp  WorkspaceItem.cpp  WorkspaceItem.h  Workunit.cpp  Workunit.h  stdafx.h
comms/6_4_0/: gsoap_build.bat
docs/: LanguageReference.xml
eclide/: CMakeLists.txt  ChildAttributeFrame.cpp  ChildMiniAppFrame.cpp  ChildMiniAppFrame.h  DebugGraphView.cpp  DebugGraphView.h  DebugView.cpp  DebugView.h  DockableDataViews.cpp  DockableDataViews.h  EclDlgAttribute.cpp  EclDlgBuilder.cpp  GraphView.cpp  GraphView3.cpp  RepositoryFrame.h  mainfrm.cpp  mainfrm.h
en_us/: en_us.rc  resource.h
wlib/: AttrListDlg.cpp  CMakeLists.txt  HtmlView.h  LangRef.cpp  LoginDlg.cpp  PreferenceDlg.cpp  RepositoryTreeNode.h  RepositoryView.h  ShellContextMenu.cpp  ShellContextMenu.h  WorkspaceTreeNode.cpp  wlib.cpp
zlib/: CMakeLists.txt
